kubernetes/projects/applications/apps/indexly/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: indexly
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: indexly
    field.cattle.io/projectId: p-applications
    kubernetes.io/metadata.name: indexly
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-applications
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: indexly
    meta.helm.sh/release-namespace: indexly
