kubernetes/projects/applications/apps/indexly/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexly
  namespace: indexly
  labels:
    app.kubernetes.io/name: indexly
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: indexly
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: indexly
      app.kubernetes.io/component: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: indexly
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: indexly
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: harbor-registry
      nodeSelector:
        kubernetes.io/arch: arm64
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: indexly
                    app.kubernetes.io/component: web
                topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: indexly
              app.kubernetes.io/component: web
      containers:
        - name: web
          image: registry.home/indexly/indexly:0.1.6 # {"$imagescan": "indexly"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 160Mi
            limits:
              memory: 240Mi
          startupProbe:
            httpGet:
              path: /robots.txt
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /robots.txt
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
