kubernetes/projects/applications/apps/indexly/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: indexly
  namespace: indexly
  labels:
    app.kubernetes.io/name: indexly
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: indexly
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: indexly
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
